tests/failing/parser/extern_decl.ri
extern (C) {
    pub fn abort(); // OK
}

mod module {
    extern pkg oreo; // BAD
    extern (C) {
        fn abort(); // OK
    }
}

extern (C) fn sss() {} // OK
