tests/failing/parser/extern_decl.out
tests/failing/parser/extern_decl.ri:6:5: error: external packages can only be declared at the package level
    |
  6 |     extern pkg oreo; // BAD
    |     ^
rivetc: error: could not compile package `core`, aborting due to previous error